# opencpn-plugin-api-analyzer

./: .gitignore  README.md  pyproject.toml  usage_example.py
opencpn_plugin_api_analyzer/: __init__.py  analyzer.py  api_parser.py  cli.py  repo_handler.py  report_generator.py  xml_parser.py
